task bulk delete endpoint, swagger updated
